--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -18,10 +18,10 @@ Middleware is available in both SSG and SSR Astro projects.
 2. Inside this file, export an [`onRequest()`](#onrequest) function. This must not be a default export.
 
     ```js title="src/middleware.js"
-    export function onRequest ({ locals, request }, next) {
-        // intercept response data from a request
+    export function onRequest (context, next) {
+        // intercept response data from a request with context.request
         // optionally, transform the response by modifying `locals`
-        locals.title = "New title";
+        context.locals.title = "New title";
 
         // return a Response or the result of calling `next()`
         return next();
